[gd_scene load_steps=11 format=3 uid="uid://crqkcqks48t2k"]

[ext_resource type="Script" path="res://scripts/components/ascPlayerCamera.gd" id="1_1hnbr"]
[ext_resource type="PackedScene" uid="uid://bsq30syei0neg" path="res://scenes/user_interface/PlayerPrompt.tscn" id="2_wxyfx"]
[ext_resource type="Script" path="res://scripts/user_interface/uiStaminaBar.gd" id="3_e80uh"]
[ext_resource type="PackedScene" uid="uid://j1akjh3lc0v" path="res://scenes/user_interface/Quiver.tscn" id="4_2483m"]
[ext_resource type="Texture2D" uid="uid://141agyx4y73o" path="res://images/sprites/icon_bolt.png" id="4_aqqua"]
[ext_resource type="Texture2D" uid="uid://b2tqyyse1shv2" path="res://images/textures/cinematic_spotlight.png" id="5_ciqm1"]
[ext_resource type="Texture2D" uid="uid://hhwkf2u82bfq" path="res://images/sprites/arrow1.png" id="5_dj7uq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_846aw"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_to3hk"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_lueap"]
script/source = "extends VBoxContainer

@onready var player = OverworldGlobals.player

func _input(event):
	if player == null:
		return
	
	if player.is_processing_input() and player.power_inputs != '' and player.power_listening and (event is InputEventKey or event is InputEventJoypadButton):
		for power in await getValidPowers(player.power_inputs):
			add_child(createReference(power))
	
	if Input.is_action_just_released('ui_gambit'):
		await clearReferences()

func clearReferences():
	for child in get_children():
		child.queue_free()
		await child.tree_exited

func createReference(power: ResPower):
	var reference = preload(\"res://scenes/user_interface/PowerReference.tscn\").instantiate()
	reference.power = power
	return reference

func getValidPowers(inputs: String):
	await clearReferences()
	var valid_powers = []
	for power in PlayerGlobals.KNOWN_POWERS:
		if power.INPUT_MAP.begins_with(inputs): valid_powers.append(power)
	return valid_powers

"

[node name="PlayerCamera" type="Camera2D"]
z_index = 99
position = Vector2(0, -96)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("1_1hnbr")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerPrompt" parent="UI" instance=ExtResource("2_wxyfx")]
offset_left = 32.0
offset_top = 32.0
offset_right = 149.0
offset_bottom = 54.0

[node name="ClearProgress" type="VBoxContainer" parent="UI"]
offset_left = 32.0
offset_top = 16.0
offset_right = 148.0
offset_bottom = 345.0
mouse_filter = 0
alignment = 2

[node name="StaminaBar" type="ProgressBar" parent="UI"]
offset_left = 264.0
offset_top = 328.0
offset_right = 376.0
offset_bottom = 335.0
theme_override_styles/background = SubResource("StyleBoxFlat_846aw")
theme_override_styles/fill = SubResource("StyleBoxFlat_to3hk")
value = 50.0
show_percentage = false
script = ExtResource("3_e80uh")

[node name="TextureRect" type="TextureRect" parent="UI/StaminaBar"]
layout_mode = 0
offset_left = -9.0
offset_top = -6.0
offset_right = 7.0
offset_bottom = 10.0
texture = ExtResource("4_aqqua")

[node name="Ammo" type="Label" parent="UI"]
offset_left = 504.0
offset_top = 320.0
offset_right = 620.0
offset_bottom = 343.0
mouse_filter = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 16
text = "1000"
horizontal_alignment = 2
vertical_alignment = 2

[node name="TextureRect" type="TextureRect" parent="UI/Ammo"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 102.0
offset_top = -10.5
offset_right = 134.0
offset_bottom = 21.5
grow_vertical = 2
texture = ExtResource("5_dj7uq")

[node name="VoidCrystals" type="Label" parent="UI"]
offset_left = 19.0
offset_top = -49.0
offset_right = 59.0
offset_bottom = -36.0
mouse_filter = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "3"

[node name="PowerInputs" type="HBoxContainer" parent="UI"]
offset_left = 296.0
offset_top = 192.0
offset_right = 344.0
offset_bottom = 200.0
mouse_filter = 0
alignment = 1

[node name="PowerReference" type="VBoxContainer" parent="UI"]
offset_left = 464.0
offset_top = 32.0
offset_right = 603.0
offset_bottom = 82.0
mouse_filter = 0
script = SubResource("GDScript_lueap")

[node name="ColorOverlay" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -204.0
offset_right = 6.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="UtilitySelector" parent="." instance=ExtResource("4_2483m")]
visible = false
position = Vector2(0, 8)
scale = Vector2(1, 1)

[node name="CinematicSpotlight" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 10
position = Vector2(1.19209e-07, -20)
scale = Vector2(0.383333, 0.362963)
texture = ExtResource("5_ciqm1")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-272, 136)

[node name="CinematicBars" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CinematicBars"]
offset_left = -384.0
offset_top = -136.0
offset_right = 378.0
offset_bottom = -70.0
color = Color(1, 1, 1, 0)

[node name="ColorRect2" type="ColorRect" parent="CinematicBars"]
offset_left = -441.0
offset_top = 72.0
offset_right = 437.0
offset_bottom = 209.0
color = Color(0, 0, 0, 0)
